Cleanup Raft Module